Add test for services and utils
